add level 1 and add shared components

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 #root {
-  max-width: 1280px;
-  width: 100%;
-  padding: 2rem;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  min-height: 100vh;
 }
 
 .logo {
