--- a/src/index.css
+++ b/src/index.css
@@ -155,3 +155,14 @@ button:focus-visible {
     @apply bg-background text-foreground;
   }
 }
+.slick-slider .slick-track{
+  display:flex;
+}
+
+.slick-next:before {
+  content: '';
+}
+
+.slick-prev:before {
+  content: '';
+}
